--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/Prog_2_Compulsory_1.Prog_2_Compulsory_1GameMode"
+GlobalDefaultGameMode=/Game/Blueprint/BP_MyProg_2_Compulsory_1GameMode.BP_MyProg_2_Compulsory_1GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
