--- a/Prog_2_Compulsory_1.uproject
+++ b/Prog_2_Compulsory_1.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "Prog_2_Compulsory_1",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
